盛り上がり度を取得するためのエンドポイントのスキーマ定義を追加
